--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# App settings (do not commit secrets)
+appsettings*.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
