--- a/MyBot.Data/MyBot.Data.csproj
+++ b/MyBot.Data/MyBot.Data.csproj
@@ -17,7 +17,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyBot.Data.Models\MyBot.Data.Models.csproj" />
+    <ProjectReference Include="..\MyBot.GCommon\MyBot.GCommon.csproj" />
   </ItemGroup>
 
 </Project>
